--- a/requirements.txt
+++ b/requirements.txt
@@ -85,7 +85,7 @@ nest-asyncio==1.5.7
 nltk==3.8.1
 notebook==7.0.6
 notebook_shim==0.2.3
-numpy==1.25.2
+numpy>=1.26.0
 oauthlib==3.2.2
 opt-einsum==3.3.0
 optree==0.13.0
@@ -129,6 +129,7 @@ scikit-learn==1.3.0
 scipy==1.11.2
 seaborn==0.13.2
 Send2Trash==1.8.2
+setuptools>=58.0.0
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.0
