--- a/requirements.txt
+++ b/requirements.txt
@@ -1,167 +1,164 @@
-﻿absl-py==2.0.0
-altair==5.3.0
-anyio==4.0.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.4.0
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==23.1.0
-Babel==2.12.1
-backcall==0.2.0
-beautifulsoup4==4.12.2
-bleach==6.0.0
-blinker==1.6.2
-cachetools==5.3.2
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.2.0
-click==8.1.7
-colorama==0.4.6
-comm==0.1.4
-contourpy==1.2.0
-cycler==0.12.1
-debugpy==1.7.0
-decorator==5.1.1
-defusedxml==0.7.1
-exceptiongroup==1.1.3
-executing==1.2.0
-fastjsonschema==2.18.0
-Flask==2.3.3
-flatbuffers==24.3.25
-fonttools==4.47.2
-fqdn==1.5.1
-frida==16.0.19
-frida-tools==12.1.2
-gast==0.5.4
-gitdb==4.0.11
-GitPython==3.1.43
-google-auth==2.26.1
-google-auth-oauthlib==1.2.0
-google-pasta==0.2.0
-grpcio==1.60.0
-h5py==3.10.0
-idna==3.4
-imbalanced-learn==0.12.0
-importlib-metadata==6.8.0
-importlib-resources==6.1.1
-ipykernel==6.25.2
-ipython==8.15.0
-isoduration==20.11.0
-itsdangerous==2.1.2
-jedi==0.19.0
-Jinja2==3.1.2
-joblib==1.3.2
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.19.0
-jsonschema-specifications==2023.7.1
-jupyter-events==0.7.0
-jupyter-lsp==2.2.0
-jupyter_client==8.3.1
-jupyter_core==5.3.1
-jupyter_server==2.7.3
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.5
-jupyterlab-pygments==0.2.2
-jupyterlab_server==2.24.0
-keras==3.6.0
-kiwisolver==1.4.5
-libclang==16.0.6
-Markdown==3.5.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mistune==3.0.1
-ml-dtypes==0.4.1
-namex==0.0.8
-nbclient==0.8.0
-nbconvert==7.8.0
-nbformat==5.9.2
-nest-asyncio==1.5.7
-nltk==3.8.1
-notebook==7.0.6
-notebook_shim==0.2.3
-numpy>=1.26.0
-oauthlib==3.2.2
-opt-einsum==3.3.0
-optree==0.13.0
-overrides==7.4.0
-packaging==23.1
-pandas==2.1.0
-pandocfilters==1.5.0
-parso==0.8.3
-pickleshare==0.7.5
-pillow==10.2.0
-platformdirs==3.10.0
-prometheus-client==0.17.1
-prompt-toolkit==3.0.38
-protobuf==4.23.4
-psutil==5.9.5
-pure-eval==0.2.2
-pyarrow==15.0.2
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycparser==2.21
-pydeck==0.8.1b0
-Pygments==2.15.1
-pyparsing==3.1.1
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-pytz==2023.3.post1
-pywinpty==2.0.11
-PyYAML==6.0.1
-pyzmq==25.1.1
-referencing==0.30.2
-regex==2023.8.8
-requests==2.31.0
-requests-oauthlib==1.3.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.7.1
-rpds-py==0.10.2
-rsa==4.9
-scikit-learn==1.3.0
-scipy==1.11.2
-seaborn==0.13.2
-Send2Trash==1.8.2
-setuptools>=58.0.0
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.0
-soupsieve==2.5
-stack-data==0.6.2
-streamlit==1.33.0
-tenacity==8.2.3
-tensorboard==2.17.1
-tensorboard-data-server==0.7.2
-tensorflow==2.17.0
-tensorflow-estimator==2.15.0
-tensorflow-intel==2.17.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.4.0
-terminado==0.17.1
-threadpoolctl==3.2.0
-tinycss2==1.2.1
-toml==0.10.2
-tomli==2.0.1
-toolz==0.12.1
-tornado==6.3.3
-tqdm==4.66.1
-traitlets==5.9.0
-typing_extensions==4.5.0
-tzdata==2023.3
-uri-template==1.3.0
-urllib3==2.0.4
-setuptools
-watchdog==4.0.0
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.6.2
-Werkzeug==2.3.7
-wrapt==1.14.1
-zipp==3.16.2
+absl-py
+altair
+anyio
+argon2-cffi
+argon2-cffi-bindings
+arrow
+asttokens
+astunparse
+async-lru
+attrs
+Babel
+backcall
+beautifulsoup4
+bleach
+blinker
+cachetools
+certifi
+cffi
+charset-normalizer
+click
+colorama
+comm
+contourpy
+cycler
+debugpy
+decorator
+defusedxml
+exceptiongroup
+executing
+fastjsonschema
+Flask
+flatbuffers
+fonttools
+fqdn
+frida
+frida-tools
+gast
+gitdb
+GitPython
+google-auth
+google-auth-oauthlib
+google-pasta
+grpcio
+h5py
+idna
+imbalanced-learn
+importlib-metadata
+importlib-resources
+ipykernel
+ipython
+isoduration
+itsdangerous
+jedi
+Jinja2
+joblib
+json5
+jsonpointer
+jsonschema
+jsonschema-specifications
+jupyter-events
+jupyter-lsp
+jupyter_client
+jupyter_core
+jupyter_server
+jupyter_server_terminals
+jupyterlab
+jupyterlab-pygments
+jupyterlab_server
+keras
+kiwisolver
+libclang
+Markdown
+markdown-it-py
+MarkupSafe
+matplotlib
+matplotlib-inline
+mdurl
+mistune
+ml-dtypes
+namex
+nbclient
+nbconvert
+nbformat
+nest-asyncio
+nltk
+notebook
+notebook_shim
+numpy
+oauthlib
+opt-einsum
+optree
+overrides
+packaging
+pandas
+pandocfilters
+parso
+pickleshare
+pillow
+platformdirs
+prometheus-client
+prompt-toolkit
+protobuf
+psutil
+pure-eval
+pyarrow
+pyasn1
+pyasn1-modules
+pycparser
+pydeck
+Pygments
+pyparsing
+python-dateutil
+python-json-logger
+pytz
+PyYAML
+pyzmq
+referencing
+regex
+requests
+requests-oauthlib
+rfc3339-validator
+rfc3986-validator
+rich
+rpds-py
+rsa
+scikit-learn
+scipy
+seaborn
+Send2Trash
+six
+smmap
+sniffio
+soupsieve
+stack-data
+streamlit
+tenacity
+tensorboard
+tensorboard-data-server
+tensorflow
+tensorflow-estimator
+tensorflow-intel
+tensorflow-io-gcs-filesystem
+termcolor
+terminado
+threadpoolctl
+tinycss2
+toml
+tomli
+toolz
+tornado
+tqdm
+traitlets
+typing_extensions
+tzdata
+uri-template
+urllib3
+watchdog
+wcwidth
+webcolors
+webencodings
+websocket-client
+Werkzeug
+wrapt
+zipp
