--- a/requirements.txt
+++ b/requirements.txt
@@ -137,7 +137,7 @@ tenacity
 tensorboard
 tensorboard-data-server
 tensorflow==2.17.0
-tensorflow-estimator
+tensorflow-estimator==2.17.0
 tensorflow-intel
 tensorflow-io-gcs-filesystem
 termcolor
