--- a/requirements.txt
+++ b/requirements.txt
@@ -66,7 +66,7 @@ jupyter_server_terminals
 jupyterlab
 jupyterlab-pygments
 jupyterlab_server
-keras
+keras==3.6.0
 kiwisolver
 libclang
 Markdown
@@ -137,7 +137,7 @@ tenacity
 tensorboard
 tensorboard-data-server
 tensorflow==2.17.0
-tensorflow-estimator==2.17.0
+tensorflow-estimator
 tensorflow-intel
 tensorflow-io-gcs-filesystem
 termcolor
